<resources>
    <string name="app_name">DemoLayout</string>
    <string name="screen1">Màn hình 1</string>
    <string name="screen2">Màn hình 2</string>
    <string name="screen3">Màn hình 3</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="set_color">Set Color</string>
    <string name="clear">Clear</string>
    <string name="white">White</string>
    <string name="button5">Button5</string>
    <string name="button4">Button4</string>
    <string name="button3">Button3</string>
    <string name="button2">Button2</string>
    <string name="button1">Button1</string>
</resources>
