<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Screen3Activity">

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button5"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn3"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn5"
        android:text="@string/button3"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn4"
        android:layout_marginRight="@dimen/dp_80"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn5"
        android:text="@string/button4"
        android:textAllCaps="false" />

    <Button
        android:layout_marginRight="@dimen/dp_30"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:textAllCaps="false" />

    <Button
        android:layout_above="@+id/btn3"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:textAllCaps="false" />
</RelativeLayout>