<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="3"
    tools:context=".view.Screen2Activity">

    <TableRow>

        <Button
            android:onClick="setColorRed"
            android:layout_column="1"
            android:text="@string/red"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_light" />

        <Button
            android:onClick="setColorGreen"
            android:layout_column="2"
            android:text="@string/green"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_green_light" />

        <Button
            android:onClick="setColorBlue"
            android:layout_column="3"
            android:text="@string/blue"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_light" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/txt_title"
            android:layout_height="@dimen/dp_60"
            android:layout_column="1"
            android:layout_span="4"
            android:background="@android:color/white" />
    </TableRow>

    <TableRow>

        <Button
            android:onClick="clear"
            android:layout_column="3"
            android:text="@string/clear"
            android:textAllCaps="false" />
    </TableRow>
</TableLayout>